updated obsidian files

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -10,5 +10,7 @@
   "showInlineTitle": false,
   "vimMode": true,
   "showLineNumber": true,
-  "showRibbon": false
+  "showRibbon": false,
+  "propertiesInDocument": "source",
+  "readableLineLength": false
 }
